# gdsii_js

./: .gitignore  CMakeLists.txt  README.md
examples/: run.html
src/gdstk_js/: CMakeLists.txt  binding_utils.cpp  binding_utils.h  gdstk_base_bind.cpp  gdstk_base_bind.h  gdstk_cell_bind.cpp  gdstk_curve_bind.cpp  gdstk_flexpath_bind.cpp  gdstk_function_bind.cpp  gdstk_label_bind.cpp  gdstk_library_bind.cpp  gdstk_module.cpp  gdstk_polygon_bind.cpp  gdstk_reference_bind.cpp  gdstk_repetition_bind.cpp
